--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
   <body>
     <h1>My HTML adventure</h1>
 
-    <p>We're writing HTML markup to display in our <strong>browser</strong>. We're
-  basically telling computers what to do. <em>Neat!</em>
-    </p>
-
-    We're writing
-<a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a> markup to
-display in our <strong>browser</strong>.
+    <p>
+    \n    We\'re writing\n<a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a> markup to\ndisplay in our <strong>browser</strong>.\n' to include '<em>'
+</p>
 
 <table>
   <thead>
